# iot-analytics-project

./: .gitignore  README.md  pyproject.toml
iot_analytics_project/: docker-compose.yml  main.py
iot_analytics_project/api/: Dockerfile  main.py  requirements.txt
iot_analytics_project/api/db/: db_connection.py  models.py
iot_analytics_project/api/routes/: endpoints.py
iot_analytics_project/dashboard/: Dockerfile  anomaly_detection.py  plots.py  requirements.txt  utils.py  visualize_data.py
iot_analytics_project/data_generation/: generate_data.py  requirements.txt  synthetic_iot_data_generator.py
iot_analytics_project/forwarder/: Dockerfile  data_forwarder.py  requirements.txt
